--- a/app/notes/[id]/NoteDetails.module.css
+++ b/app/notes/[id]/NoteDetails.module.css
@@ -54,6 +54,24 @@
   text-overflow: ellipsis;
 }
 
+.editbtn {
+  align-self: flex-end;
+  padding: 6px 12px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #0d6efd; /* синій колір */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.2s ease;
+}
+
+.editbtn:hover {
+  background-color: #0b5ed7;
+}
+
 .backBtn {
   align-self: flex-start;
   padding: 6px 12px;
