--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,3 +1,5 @@
+/* components/Footer.module.css */
+
 .footer {
   padding: 20px;
   background-color: #f0f0f0;
@@ -14,7 +16,7 @@
 }
 
 .footer a {
-  color: #0d6efd;
+  color: #226ec5;
   font-weight: 600;
   text-decoration: none;
 }
